src/popup/components/table/TableEntry.css
.table-entry {
  padding: 8px 16px;
  display: flex;
  justify-content: space-between;
  color: #424242;
}

.table-entry-odd {
  background: #f8f8f8;
}

.table-entry:hover {
  background: #ebebeb;
  color: #4a4a4a;
}

.table-options {
  display: flex;
  align-items: center;
}

.table-options .icon + .icon {
  margin-left: 8px;
}

.icon {
  cursor: pointer;
  margin-right: 8px;
}

